--- a/notebooks/demo.ipynb
+++ b/notebooks/demo.ipynb
@@ -30,14 +30,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'uuv_mission'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Import relevant modules\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01muuv_mission\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdynamic\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Submarine\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01muuv_mission\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdynamic\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ClosedLoop\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01muuv_mission\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcontrol\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Controller\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'uuv_mission'"
+     ]
+    }
+   ],
    "source": [
     "# Import relevant modules\n",
+    "from uuv_mission.dynamic import Submarine\n",
+    "from uuv_mission.dynamic import ClosedLoop\n",
+    "from uuv_mission.control import Controller\n",
+    "from uuv_mission.dynamic import Mission\n",
+    "\n",
     "\n",
     "sub = Submarine()\n",
     "# Instantiate your controller (depending on your implementation)\n",
+    "controller = Controller(Kp=0.5, Kd=0.6)\n",
     "closed_loop = ClosedLoop(sub, controller)\n",
     "mission = Mission.from_csv(\"path/to/file\") # You must implement this method in the Mission class\n",
     "\n",
@@ -62,7 +80,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
